syntax = "proto3";
package wavesenterprise;

option java_multiple_files = true;
option java_package = "com.wavesplatform.transaction.protobuf.docker";
option csharp_namespace = "WavesEnterprise";

import "google/protobuf/wrappers.proto";
import "atomic_badge.proto";

message UpdateContractTransaction {
  bytes id = 1;
  bytes sender_public_key = 2;
  bytes contract_id = 3;
  string image = 4;
  string image_hash = 5;
  int64 fee = 6;
  int64 timestamp = 7;
  google.protobuf.BytesValue fee_asset_id = 8;
  AtomicBadge atomic_badge = 9;
  repeated bytes proofs = 10;
}